# Fyr-Framework-SC-

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  eslint.config.js  package.json  tsconfig.build.json  tsconfig.json  tsconfig.node.json  vite.config.ts  vite.min.config.ts  vitest.config.ts
docs/: api-reference.md  browser-python.md  cdn.md  classroom.md  components.md  controllers.md  deployment.md  directives.md  examples.md  fastapi.md  flask.md  getting-started.md  http.md  index.html  index.md  routing.md  rust-wasm.md  security.md  server-actions.md  sockets.md  ui.md
examples/advanced-dashboard/: README.md  app.js  index.html  styles.css
examples/browser-python/: README.md  app.js  index.html
examples/counter/: app.js  index.html  styles.css
examples/fastapi-api/: README.md  app.js  index.html  main.py
examples/flask-api/: README.md  app.js  app.py  index.html  styles.css
examples/router/: README.md  app.js  index.html
examples/rust-wasm/: README.md  app.js  index.html
examples/todo/: app.js  index.html  styles.css
rust/: Cargo.toml
rust/src/: arrays.rs  engine.rs  lib.rs  memory.rs  numbers.rs  strings.rs
scripts/: build-rust.ps1  build-rust.sh  build.mjs  generate-checksums.mjs  verify-wasm.mjs
src/core/: fyr.ts  index.ts  types.ts
src/directives/: registry.ts
src/plugins/: plugin.ts
src/python/: index.ts  javascript-bridge.ts  package-loader.ts  pyodide-loader.ts  python-errors.ts  python-plugin.ts  python-runtime.ts  python.worker.ts  worker-manager.ts
src/router/: guards.ts  history.ts  index.ts  navigation.ts  (+3 more)
tests/: core-runtime.test.ts  setup.ts
(+146 files in other folders)
