[package]
name = "fyr-engine"
version = "0.1.0"
edition = "2021"
description = "Fyr WebAssembly engine for browser computation"
authors = ["Fyr Framework Contributors"]
license = "MIT"
repository = "https://github.com/fyr-framework/fyr"
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.95"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
js-sys = "0.3"
console_error_panic_hook = "0.1"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true