[package]
name = "fyr-engine"
version = "0.1.0"
edition = "2021"
description = "Fyr WebAssembly engine for browser computation"
authors = ["Fyr Framework Contributors"]
license = "MIT"
repository = "https://github.com/fyr-framework/fyr"
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
bindings = [
    "dep:base64",
    "dep:console_error_panic_hook",
    "dep:js-sys",
    "dep:serde",
    "dep:serde_json",
    "dep:wasm-bindgen",
]

[dependencies]
wasm-bindgen = { version = "0.2.95", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
js-sys = { version = "0.3", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
base64 = { version = "0.22", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
